RestaurantManagement/src/objects/Restaurant__c.object
<CustomObject>
    <fields>
        <fullName>Apartment_Suite__c</fullName>
        <description>Apartment Number</description>
        <inlineHelpText>Apartment Number</inlineHelpText>
        <label>Apartment/Suite</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <description>Branch</description>
        <inlineHelpText>Branch</inlineHelpText>
        <label>Branch</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country where the restaurant is located</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabo Verde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email</description>
        <inlineHelpText>Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <description>Name of Restaurant Manager</description>
        <inlineHelpText>Name of Restaurant Manager</inlineHelpText>
        <label>Manager</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone Number</description>
        <inlineHelpText>Phone Number</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Restaurant_ID__c</fullName>
        <description>Restaurant ID</description>
        <displayFormat>R-{0000}</displayFormat>
        <inlineHelpText>Restaurant ID</inlineHelpText>
        <label>Restaurant ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State</description>
        <inlineHelpText>State</inlineHelpText>
        <label>State</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Street Address</description>
        <label>Street Address</label>
        <length>70</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Zip</description>
        <inlineHelpText>Zip</inlineHelpText>
        <label>Zip</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Restaurant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Restaurant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Restaurants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>